--- a/app/views/locks/view_requests.html.erb
+++ b/app/views/locks/view_requests.html.erb
@@ -1,27 +1,65 @@
 
 <h1 style="margin-top: 10px; margin-bottom: 10px;">View all locks submissions</h1>
 <div class="container">
-  <div class="cards">
-      <% @locks.each do |lock| %>
-      <div class="card" id="request-card">
-          <div class="card-info">
-            <h2><%= lock.name %></h2>
-            <br>
+    <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
+      <li class="nav-item" role="presentation">
+        <button class="nav-link active" id="Overview-tab" data-bs-toggle="tab" data-bs-target="#Overview" type="button" role="tab" aria-controls="Overview" aria-selected="true"> Pending <%= "(#{@locks.count})" %></button>
+      </li>
+      <li class="nav-item" role="presentation">
+        <button class="nav-link" id="Reviews-tab" data-bs-toggle="tab" data-bs-target="#Reviews" type="button" role="tab" aria-controls="Reviews" aria-selected="false"> Declined <%= "(#{@declined_locks.count})" %></button>
+      </li>
+    </ul>
+
+  <div class="tab-content" id="myTab-content">
+
+    <div class="tab-pane fade show active" id="Overview" role="tabpanel" aria-labelledby="Overview-tab">
+
+      <div class="cards">
+          <% @locks.each do |lock| %>
+          <div class="card" id="request-card">
+              <div class="card-info">
+                <h2><%= lock.name %></h2>
+                <br>
+              </div>
+                <%= cl_image_tag(lock.photo.key, id: "request-card-image") %>
+                <br>
+              <div class="card-info">
+                <p><%= lock.description %></p>
+              </div>
+            <div class="card-buttons">
+              <div class="card-button">
+                <%= link_to 'Accept?', accept_lock_path(lock), method: :patch, data: { confirm: "Are you sure?" }, :class => "btn btn-primary" %>
+              </div>
+              <div class="card-button">
+                <%= link_to 'Decline?', decline_lock_path(lock), method: :patch, data: { confirm: "Are you sure?" }, :class => "btn btn-info" %>
+              </div>
+            </div>
           </div>
-            <%= cl_image_tag(lock.photo.key, id: "request-card-image") %>
-            <br>
-          <div class="card-info">
-            <p><%= lock.description %></p>
-          </div>
-        <div class="card-buttons">
-          <div class="card-button">
-            <%= link_to 'Accept?', accept_lock_path(lock), method: :patch, data: { confirm: "Are you sure?" }, :class => "btn btn-primary" %>
-          </div>
-          <div class="card-button">
-            <%= link_to 'Decline?', decline_lock_path(lock), method: :patch, data: { confirm: "Are you sure?" }, :class => "btn btn-info" %>
-          </div>
-        </div>
+          <% end %>
       </div>
-      <% end %>
+    </div>
+
+    <div class="tab-pane fade show active" id="Reviews" role="tabpanel" aria-labelledby="Overview-tab">
+      <div class="cards">
+          <% @declined_locks.each do |lock| %>
+          <div class="card" id="request-card">
+              <div class="card-info">
+                <h2><%= lock.name %></h2>
+                <br>
+              </div>
+                <%= cl_image_tag(lock.photo.key, id: "request-card-image") %>
+                <br>
+              <div class="card-info">
+                <p><%= lock.description %></p>
+              </div>
+            <div class="card-buttons">
+              <div class="card-button">
+                <%= link_to 'Accept?', accept_lock_path(lock), method: :patch, data: { confirm: "Are you sure?" }, :class => "btn btn-primary" %>
+              </div>
+            </div>
+          </div>
+          <% end %>
+      </div>
+    </div>
   </div>
 </div>
